# xorq-weather-lib

./: .envrc  .envrc.secrets.weather.template  .envrc.user.weather.template  .pre-commit-config.yaml  flake.nix  pyproject.toml  requirements-dev.txt
src/weather_lib/: __init__.py
src/xorq_weather_lib/: __init__.py
