[project]
name = "weather-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hash-cache",
    "requests>=2.32.3",
    "toolz>=1.0.0",
    "urllib3>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "pre-commit>=4.2.0",
    "ruff>=0.6.7",
]

[tool.uv.sources]
hash-cache = { git = "https://github.com/xorq-labs/hash-cache" }
