[project]
name = "xorq-weather-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xorq-hash-cache",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
    "toolz>=1.0.0",
    "urllib3>=2.2.3",
    "xorq>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.6.7",
]

[tool.uv.sources]
xorq-hash-cache = { git = "https://github.com/xorq-labs/hash-cache" }
